kadai5/05-221021/hatten3/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr LETAND letand
   3           | LET var EQ expr SEMISEMI
   4           | LET var EQ expr decl

   5  letand : var EQ expr LETAND letand
   6         | var EQ expr SEMISEMI
   7         | var EQ expr IN expr

   8  decl : LET var EQ expr decl
   9       | LET var EQ expr SEMISEMI

  10  expr : LET var EQ expr IN expr
  11       | IF expr THEN expr ELSE expr
  12       | expr1

  13  expr1 : expr2 AND expr1
  14        | expr2 OR expr1
  15        | expr2

  16  expr2 : expr2 EQ arith_expr
  17        | expr2 LT arith_expr
  18        | arith_expr

  19  arith_expr : arith_expr PLUS factor_expr
  20             | arith_expr MINUS factor_expr
  21             | factor_expr

  22  factor_expr : factor_expr TIMES atomic_expr
  23              | factor_expr DIV atomic_expr
  24              | expr3

  25  expr3 : NOT expr3
  26        | atomic_expr

  27  atomic_expr : INT
  28              | BOOL
  29              | ID
  30              | LPAR expr RPAR

  31  var : ID

  32  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (27)

	.  reduce 27


state 4
	atomic_expr : BOOL .  (28)

	.  reduce 28


state 5
	atomic_expr : ID .  (29)

	.  reduce 29


state 6
	toplevel : LET . var EQ expr LETAND letand  (2)
	toplevel : LET . var EQ expr SEMISEMI  (3)
	toplevel : LET . var EQ expr decl  (4)
	expr : LET . var EQ expr IN expr  (10)

	ID  shift 18
	.  error

	var  goto 19


state 7
	expr : IF . expr THEN expr ELSE expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 21
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 8
	atomic_expr : LPAR . expr RPAR  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 22
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 9
	expr3 : NOT . expr3  (25)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	atomic_expr  goto 16
	expr3  goto 23


state 10
	%entry% : '\001' toplevel .  (32)

	.  reduce 32


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 24
	.  error


state 12
	expr : expr1 .  (12)

	.  reduce 12


state 13
	expr1 : expr2 . AND expr1  (13)
	expr1 : expr2 . OR expr1  (14)
	expr1 : expr2 .  (15)
	expr2 : expr2 . EQ arith_expr  (16)
	expr2 : expr2 . LT arith_expr  (17)

	EQ  shift 25
	LT  shift 26
	AND  shift 27
	OR  shift 28
	$end  reduce 15
	LET  reduce 15
	IN  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	LETAND  reduce 15
	SEMISEMI  reduce 15


state 14
	expr2 : arith_expr .  (18)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 18
	LET  reduce 18
	IN  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	AND  reduce 18
	OR  reduce 18
	LETAND  reduce 18
	SEMISEMI  reduce 18


state 15
	arith_expr : factor_expr .  (21)
	factor_expr : factor_expr . TIMES atomic_expr  (22)
	factor_expr : factor_expr . DIV atomic_expr  (23)

	TIMES  shift 31
	DIV  shift 32
	$end  reduce 21
	LET  reduce 21
	IN  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	EQ  reduce 21
	LT  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	RPAR  reduce 21
	AND  reduce 21
	OR  reduce 21
	LETAND  reduce 21
	SEMISEMI  reduce 21


state 16
	expr3 : atomic_expr .  (26)

	.  reduce 26


state 17
	factor_expr : expr3 .  (24)

	.  reduce 24


state 18
	var : ID .  (31)

	.  reduce 31


state 19
	toplevel : LET var . EQ expr LETAND letand  (2)
	toplevel : LET var . EQ expr SEMISEMI  (3)
	toplevel : LET var . EQ expr decl  (4)
	expr : LET var . EQ expr IN expr  (10)

	EQ  shift 33
	.  error


state 20
	expr : LET . var EQ expr IN expr  (10)

	ID  shift 18
	.  error

	var  goto 34


state 21
	expr : IF expr . THEN expr ELSE expr  (11)

	THEN  shift 35
	.  error


state 22
	atomic_expr : LPAR expr . RPAR  (30)

	RPAR  shift 36
	.  error


state 23
	expr3 : NOT expr3 .  (25)

	.  reduce 25


state 24
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 25
	expr2 : expr2 EQ . arith_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	arith_expr  goto 37
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 26
	expr2 : expr2 LT . arith_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	arith_expr  goto 38
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 27
	expr1 : expr2 AND . expr1  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr1  goto 39
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 28
	expr1 : expr2 OR . expr1  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr1  goto 40
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 29
	arith_expr : arith_expr PLUS . factor_expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	factor_expr  goto 41
	atomic_expr  goto 16
	expr3  goto 17


state 30
	arith_expr : arith_expr MINUS . factor_expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	NOT  shift 9
	.  error

	factor_expr  goto 42
	atomic_expr  goto 16
	expr3  goto 17


state 31
	factor_expr : factor_expr TIMES . atomic_expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 43


state 32
	factor_expr : factor_expr DIV . atomic_expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	atomic_expr  goto 44


state 33
	toplevel : LET var EQ . expr LETAND letand  (2)
	toplevel : LET var EQ . expr SEMISEMI  (3)
	toplevel : LET var EQ . expr decl  (4)
	expr : LET var EQ . expr IN expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 45
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 34
	expr : LET var . EQ expr IN expr  (10)

	EQ  shift 46
	.  error


state 35
	expr : IF expr THEN . expr ELSE expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 47
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 36
	atomic_expr : LPAR expr RPAR .  (30)

	.  reduce 30


state 37
	expr2 : expr2 EQ arith_expr .  (16)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 16
	LET  reduce 16
	IN  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	AND  reduce 16
	OR  reduce 16
	LETAND  reduce 16
	SEMISEMI  reduce 16


state 38
	expr2 : expr2 LT arith_expr .  (17)
	arith_expr : arith_expr . PLUS factor_expr  (19)
	arith_expr : arith_expr . MINUS factor_expr  (20)

	PLUS  shift 29
	MINUS  shift 30
	$end  reduce 17
	LET  reduce 17
	IN  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	AND  reduce 17
	OR  reduce 17
	LETAND  reduce 17
	SEMISEMI  reduce 17


state 39
	expr1 : expr2 AND expr1 .  (13)

	.  reduce 13


state 40
	expr1 : expr2 OR expr1 .  (14)

	.  reduce 14


state 41
	arith_expr : arith_expr PLUS factor_expr .  (19)
	factor_expr : factor_expr . TIMES atomic_expr  (22)
	factor_expr : factor_expr . DIV atomic_expr  (23)

	TIMES  shift 31
	DIV  shift 32
	$end  reduce 19
	LET  reduce 19
	IN  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	EQ  reduce 19
	LT  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	AND  reduce 19
	OR  reduce 19
	LETAND  reduce 19
	SEMISEMI  reduce 19


state 42
	arith_expr : arith_expr MINUS factor_expr .  (20)
	factor_expr : factor_expr . TIMES atomic_expr  (22)
	factor_expr : factor_expr . DIV atomic_expr  (23)

	TIMES  shift 31
	DIV  shift 32
	$end  reduce 20
	LET  reduce 20
	IN  reduce 20
	PLUS  reduce 20
	MINUS  reduce 20
	EQ  reduce 20
	LT  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	RPAR  reduce 20
	AND  reduce 20
	OR  reduce 20
	LETAND  reduce 20
	SEMISEMI  reduce 20


state 43
	factor_expr : factor_expr TIMES atomic_expr .  (22)

	.  reduce 22


state 44
	factor_expr : factor_expr DIV atomic_expr .  (23)

	.  reduce 23


state 45
	toplevel : LET var EQ expr . LETAND letand  (2)
	toplevel : LET var EQ expr . SEMISEMI  (3)
	toplevel : LET var EQ expr . decl  (4)
	expr : LET var EQ expr . IN expr  (10)

	LET  shift 48
	IN  shift 49
	LETAND  shift 50
	SEMISEMI  shift 51
	.  error

	decl  goto 52


state 46
	expr : LET var EQ . expr IN expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 53
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 47
	expr : IF expr THEN expr . ELSE expr  (11)

	ELSE  shift 54
	.  error


state 48
	decl : LET . var EQ expr decl  (8)
	decl : LET . var EQ expr SEMISEMI  (9)

	ID  shift 18
	.  error

	var  goto 55


state 49
	expr : LET var EQ expr IN . expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 56
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 50
	toplevel : LET var EQ expr LETAND . letand  (2)

	ID  shift 18
	.  error

	var  goto 57
	letand  goto 58


state 51
	toplevel : LET var EQ expr SEMISEMI .  (3)

	.  reduce 3


state 52
	toplevel : LET var EQ expr decl .  (4)

	.  reduce 4


state 53
	expr : LET var EQ expr . IN expr  (10)

	IN  shift 49
	.  error


state 54
	expr : IF expr THEN expr ELSE . expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 59
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 55
	decl : LET var . EQ expr decl  (8)
	decl : LET var . EQ expr SEMISEMI  (9)

	EQ  shift 60
	.  error


state 56
	expr : LET var EQ expr IN expr .  (10)

	.  reduce 10


state 57
	letand : var . EQ expr LETAND letand  (5)
	letand : var . EQ expr SEMISEMI  (6)
	letand : var . EQ expr IN expr  (7)

	EQ  shift 61
	.  error


state 58
	toplevel : LET var EQ expr LETAND letand .  (2)

	.  reduce 2


state 59
	expr : IF expr THEN expr ELSE expr .  (11)

	.  reduce 11


state 60
	decl : LET var EQ . expr decl  (8)
	decl : LET var EQ . expr SEMISEMI  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 62
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 61
	letand : var EQ . expr LETAND letand  (5)
	letand : var EQ . expr SEMISEMI  (6)
	letand : var EQ . expr IN expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 63
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 62
	decl : LET var EQ expr . decl  (8)
	decl : LET var EQ expr . SEMISEMI  (9)

	LET  shift 48
	SEMISEMI  shift 64
	.  error

	decl  goto 65


state 63
	letand : var EQ expr . LETAND letand  (5)
	letand : var EQ expr . SEMISEMI  (6)
	letand : var EQ expr . IN expr  (7)

	IN  shift 66
	LETAND  shift 67
	SEMISEMI  shift 68
	.  error


state 64
	decl : LET var EQ expr SEMISEMI .  (9)

	.  reduce 9


state 65
	decl : LET var EQ expr decl .  (8)

	.  reduce 8


state 66
	letand : var EQ expr IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 20
	IF  shift 7
	LPAR  shift 8
	NOT  shift 9
	.  error

	expr  goto 69
	expr1  goto 12
	expr2  goto 13
	arith_expr  goto 14
	factor_expr  goto 15
	atomic_expr  goto 16
	expr3  goto 17


state 67
	letand : var EQ expr LETAND . letand  (5)

	ID  shift 18
	.  error

	var  goto 57
	letand  goto 70


state 68
	letand : var EQ expr SEMISEMI .  (6)

	.  reduce 6


state 69
	letand : var EQ expr IN expr .  (7)

	.  reduce 7


state 70
	letand : var EQ expr LETAND letand .  (5)

	.  reduce 5


24 terminals, 13 nonterminals
33 grammar rules, 71 states
